<resources>
    <string name="app_name">김포한강AC-05</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="alert">알림</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="detail">자세히</string>

    <string name="config_data_check">데이터 정보를 확인 중 입니다</string>
    <string name="config_data_register">설정 정보를 등록 중 입니다</string>
    <string name="config_user_info_register">사용자 정보 등록 중 입니다</string>
    <string name="config_user_info_verify">사용자 정보 확인 중 입니다</string>
    <string name="config_check_app_version">버전 정보 확인 중 입니다</string>

    <string name="config_force_update">새로운 버전으로 업데이트 해야 사용 할 수 있습니다.</string>

    <string name="config_data_can_not_read">설정 정보를 가져올 수 없어 앱이 종료 됩니다.</string>

    <string name="fail_auth_user_info">사용자 정보를 확인 할 수 없어 종료 됩니다</string>

    <string name="exit_click_back_twice">뒤로가기 동작 시 종료 됩니다.</string>

    <string name="create_date">등록일</string>
    <!-- Left Menu-->
    <string name="main">메인</string>
    <string name="notice">알림</string>
    <string name="infomation">정보</string>
    <string name="image_infomation">사진</string>
    <string name="cafe">카페</string>
    <string name="talk">AC05 톡</string>
    <string name="talk_local">AC05 지역 톡</string>
    <string name="district_talk">%s동 톡</string>
    <string name="camera_photo">AC05 사진</string>
    <string name="person_alarm">개인 알람</string>
    <string name="crop_image">이미지 자르기</string>
    <string name="upload_image">이미지 업로드</string>
    <string name="setting">설정</string>
    <string name="admin">관리자</string>
    <string name="send">보내기</string>
    <string name="delete">삭제</string>
    <string name="read_more">더 보기</string>
    <string name="chat_alarm_on">알람 켬</string>
    <string name="chat_alarm_off">알람 끔</string>

    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="password">비밀번호</string>
    <string name="nickname">닉네임</string>
    <string name="recently_active_date">최근 접속</string>
    <string name="device">디바이스정보</string>
    <string name="logout">로그아웃</string>
    <string name="my_info">내정보</string>
    <string name="edit_info">정보수정</string>
    <string name="my_cafe_info">NAVER 카페정보</string>
    <string name="login_need">로그인이 필요합니다. 로그인 하시겠습니까?</string>

    <string name="input_user_dong">어느 동에 계신가요 ?</string>

    <!-- Main -->
    <string name="public_notice">공지사항</string>
    <string name="town_news">구래동 소식</string>
    <string name="gimpo_journal">김포 저널</string>
    <string name="gimpo_news">김포 뉴스</string>

    <!-- Setting  -->
    <string name="setting_user_info">사용자 정보</string>
    <string name="setting_config_push">알림 설정</string>
    <string name="setting_config_push_on">댓글,정보,기타 알림을 수신함</string>
    <string name="setting_config_push_off">댓글,정보,기타 알림을 수신하지 않음</string>
    <string name="setting_common_settings">일반 설정</string>
    <string name="setting_version_info">버전 정보</string>
    <string name="setting_district">설정 구역</string>
    <string name="setting_qna">문의하기</string>
    <string name="setting_qna_value">문의사항 혹은 필요한 기능이 있다면, Google PlayStore 댓글 부탁 드립니다</string>

    <string name="setting_logout_message">로그아웃 시 앱이 종료됩니다.</string>

    <!-- UserInfo -->
    <string name="invalid_user_email">이메일 형식이 잘못 되었습니다.</string>
    <string name="invalid_user_password">패스워드 형식이 잘못 되었습니다.</string>

    <string name="userinfo_input_wellcome">%s 님!\n원활한 앱 사용을 위하여 간단한 기본 정보를 입력해 주시겠어요?</string>

    <!-- Page data-->
    <string name="page_data_empty">정보가 없습니다.</string>

    <!-- Chatting -->
    <string name="received_messages_over_three">3+ 메세지</string>
    <string name="received_messages_from_user">개인 메세지가 도착하였습니다.</string>
    <string name="upload_new_photo_from_user">새로운 사진이 등록 되었습니다.</string>

    <string name="error_image_upload_failed">사진 업로드가 실패하였 습니다.</string>

    <string name="hint_input_message">내용 입력</string>
    <string name="error_input_message">내용이 입력되지 않았습니다.</string>
    <string name="chat_user_list">현재 참여인원</string>

    <string name="sending_message">메세지 보내기</string>
    <string name="report_bad_user">불량사용자 신고</string>
    <string name="report_bad_user_completed">불량사용자 신고가 완료 되었습니다.</string>

    <string name="delete_chat_message">메세지가 삭제 됩니다.</string>
    <string name="can_not_delete_chat_message">본인의 작성한 메세지만 삭제 할 수 있습니다.</string>
    <string name="delete_gallery_message">사진을 삭제 하시겠습니까?</string>
    <string name="delete_captured_data">캡쳐된 게시물을 삭제 하시겠습니까?</string>

    <string name="does_not_setting_message">값이 설정되지 않았습니다.</string>
    <string name="duplication_nickname">중복된 닉네임 입니다.</string>
    <string name="cancel_input_user_info_message">정보입력을 취소하시겠습니까? 취소 할 경우 앱이 종료됩니다.</string>

    <!-- Cafe -->
    <string name="scrap_data_name">스크랩 이름</string>
    <string name="scraped_cafe_content">스크랩된 카페 게시물</string>
    <string name="cafe_content_scrap">현재 카페 게시물 앱으로 스크랩</string>
    <string name="already_scrap_content">이미 스크랩된 게시물입니다.</string>
    <string name="new_scrap_data">새로운 스크랩 게시물 등록</string>
    <string name="added_new_comment_to_scrap">%s 에 새로운 코멘트가 추가 되었습니다</string>

    <string name="new_alarm">새로운 알림</string>



</resources>
