<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@color/colorAccent"
    tools:context=".ui.SettingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.Toolbar"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:collapsedTitleTextAppearance="@style/CollpaseCollapsingToolbar"
            app:expandedTitleTextAppearance="@style/ExpendCollapsingToolbar">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_collapseMode="pin">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rect_black_alpha10_color"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="bottom|right"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_setting_user_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:gravity="right"
                        style="@style/TextDropdownType.Small"/>
                    <com.fivetrue.fivetrueandroid.view.CircleImageView
                        android:id="@+id/iv_setting_user_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                </LinearLayout>


            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:titleTextColor="@color/colorAccent"
                android:theme="@style/AppTheme.Toolbar"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:id="@+id/layout_setting_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_text_height"
                    android:text="@string/setting_user_info"
                    style="@style/CategoryText"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/common_horizontal_padding"
                    android:layout_centerVertical="true">

                    <Button
                        android:id="@+id/btn_setting_cafe_user_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/my_cafe_info"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/setting_category_text_size"
                        android:layout_marginRight="@dimen/common_horizontal_padding"
                        android:padding="@dimen/common_horizontal_padding"
                        android:background="@drawable/selector_common_button"/>

                    <Button
                        android:id="@+id/btn_setting_user_logout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/logout"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/setting_category_text_size"
                        android:padding="@dimen/common_horizontal_padding"
                        android:background="@drawable/selector_common_button"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_text_height"
                    android:text="@string/setting_config_push"
                    style="@style/CategoryText"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_text_height"
                    android:background="@color/colorAccent">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/sw_setting_push"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/common_horizontal_padding"
                        android:layout_alignParentRight="true"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/setting_config_push"
                        android:layout_toLeftOf="@id/sw_setting_push"
                        style="@style/SubItemText"/>
                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_text_height"
                    android:text="@string/setting_common_settings"
                    style="@style/CategoryText"/>

                <RelativeLayout
                    android:id="@+id/layout_setting_district"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_text_height"
                    android:background="@color/colorAccent">
                    <TextView
                        android:id="@+id/tv_setting_district_info"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/setting_district"
                        style="@style/SubItemText"/>

                    <TextView
                        android:id="@+id/tv_setting_district_info_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/tv_setting_district_info"
                        android:gravity="center"
                        style="@style/SubItemText"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/rect_black_alpha10_color"/>

                <RelativeLayout
                    android:id="@+id/layout_setting_version_info"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_text_height"
                    android:background="@color/colorAccent">
                    <TextView
                        android:id="@+id/tv_setting_version_info"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/setting_version_info"
                        style="@style/SubItemText"/>

                    <TextView
                        android:id="@+id/tv_setting_version_info_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/tv_setting_version_info"
                        android:gravity="center"
                        style="@style/SubItemText"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/rect_black_alpha10_color"/>

                <RelativeLayout
                    android:id="@+id/layout_setting_dev_qna"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_text_height"
                    android:background="@color/colorAccent">
                    <TextView
                        android:id="@+id/tv_setting_dev_qna"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/setting_version_info"
                        style="@style/SubItemText"/>

                    <TextView
                        android:id="@+id/tv_setting_dev_qna_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/tv_setting_dev_qna"
                        android:text="@string/setting_qna_value"
                        android:gravity="left"
                        style="@style/SubItemText"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/rect_black_alpha10_color"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>